crates/app/sdk/macros/tests/fail/multiple_init.stderr
error: Multiple #[init] functions are not allowed.
   --> tests/fail/multiple_init.rs:109:12
    |
109 |         fn another_initialize(
    |            ^^^^^^^^^^^^^^^^^^

warning: unused import: `init`
  --> tests/fail/multiple_init.rs:85:35
   |
85 | use evolve_macros::{account_impl, init};
   |                                   ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
